--- a/index.html
+++ b/index.html
@@ -5,61 +5,77 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="./index.css">
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+<header>
+  <img src="./images/logo.svg">
 
-  Try It Free
+  <a href="try.html" class="shadow">Try It Free</a>
+</header>
+<section id="hero">
+  <h1>Build The Community Your Fans Will Love</h1>
 
-  Build The Community Your Fans Will Love
+  <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+  Create connections with your users as you engage in genuine discussion.</p>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  <a href="try.html">Get Started For Free</a>
+  <img src="images/bg-hero-desktop.svg">
+</section>
+  <main>
+<section class="item">
+  <h2>Grow Together</h2>
 
-  Get Started For Free
+  <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
+  Think of the insightful conversations you miss out on with a feedback form. </p>
+  <img src="./images/illustration-grow-together.svg">
+</section>
+<section class="item">
+  <h2>Flowing Conversations</h2>
 
-  Grow Together
+  <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+  have just-in-time loading for a more natural flow.</p>
+  <img src="./images/illustration-flowing-conversation.svg">
+</section>
+<section class="item">
+  <h2>Your Users</h2>
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
+  <p>It takes no time at all to integrate Huddle with your app's authentication solution. 
+  This means, once signed in to your app, your users can start chatting immediately.</p>
+  <img src="./images/illustration-your-users.svg">
+</section>
+</main>
+<div class="ready shadow">
+  <h1>Ready To Build Your Community?</h1>
 
-  Flowing Conversations
+  <a href="try.html">Get Started For Free</a>
+</div>
 
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+  <footer>
+    <img src="images/logo.svg">
+    <img src="./images/icon-location.svg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
   incididunt ut labore et dolore magna aliqua
 
-  +1-543-123-4567
-  example@huddle.com
+  <img src="./images/icon-phone.svg">+1-543-123-4567
+  <img src="./images/icon-email.svg"><a href="mailto:example@huddle.com">example@huddle.com</a>
+<nav>
+  <a href="about.html">About Us</a>
+  <a href="what.html">What We Do</a>
+  <a href="faq.html">FAQ</a>
 
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
-
+  <a href="faq.html">Career</a>
+  <a href="faq.html">Blog</a>
+  <a href="faq.html">Contact Us</a>
+</nav>
+<i class="icon fab fa-facebook-f"></i>
+<i class="icon fab fa-twitter"></i>
+<i class="icon fab fa-instagram"></i>
+  <div class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</div>
+  </footer>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
