mobile first attempt

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <img class="img-flex" src="./images/illustration-grow-together.svg">
     </section>
-    <section class="item shadow">
+    <section class="item shadow rev">
       <img class="img-flex" src="./images/illustration-flowing-conversation.svg">
       <div class="text-flex">
         <h2>Flowing Conversations</h2>
