--- a/index.html
+++ b/index.html
@@ -22,24 +22,22 @@
   <section id="hero">
     <div class="top">
       <img class="logo" src="./images/logo.svg">
-      <a href="try.html" class="shadow">Try It Free</a>
+      <a class="aborder right shadow" href="try.html">Try It Free</a>
     </div>
     <div class="container">
-      <div>
+      <div class="intro">
         <h1>Build The Community Your Fans Will Love</h1>
 
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
           Create connections with your users as you engage in genuine discussion.</p>
 
-        <a href="try.html">Get Started For Free</a>
+        <a class="aborder" href="try.html">Get Started For Free</a>
       </div>
-      <div class="imgparent">
-        <img class="mockup" src="images/illustration-mockups.svg">
-      </div>
+      <img class="mockup" src="images/illustration-mockups.svg">
     </div>
   </section>
   <main>
-    <section class="item shadow">
+    <section class="item shadow rev">
       <div class="text-flex">
         <h2>Grow Together</h2>
         <p>Generate meaningful discussions with your audience and build a strong, loyal community.
@@ -47,7 +45,7 @@
       </div>
       <img class="img-flex" src="./images/illustration-grow-together.svg">
     </section>
-    <section class="item shadow rev">
+    <section class="item shadow">
       <img class="img-flex" src="./images/illustration-flowing-conversation.svg">
       <div class="text-flex">
         <h2>Flowing Conversations</h2>
@@ -55,7 +53,7 @@
           have just-in-time loading for a more natural flow.</p>
       </div>
     </section>
-    <section class="item shadow">
+    <section class="item shadow rev">
       <div class="text-flex">
         <h2>Your Users</h2>
         <p>It takes no time at all to integrate Huddle with your app's authentication solution.
@@ -67,7 +65,7 @@
   <div class="ready shadow">
     <h1>Ready To Build Your Community?</h1>
 
-    <a href="try.html">Get Started For Free</a>
+    <a class="aborder" href="try.html">Get Started For Free</a>
   </div>
 
   <footer>
@@ -104,10 +102,10 @@
     <div class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</div>
   </footer>
   <br>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+  <p class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Your Name Here</a>.
+  </p>
 </body>
 
 </html>
