--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <!-- displays site properly based on user's device -->
 
 
@@ -78,7 +78,7 @@
           adipiscing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua
         </div>
-        <div class="contact-item"><img src="./images/icon-phone.svg">+1-543-123-4567
+        <div class="contact-item"><img src="./images/icon-phone.svg"><a href="tel:+1-543-123-4567">+1-543-123-4567</a>
         </div>
         <div class="contact-item"><img src="./images/icon-email.svg"><a href="mailto:example@huddle.com">example@huddle.com</a>
         </div>
@@ -106,6 +106,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </p>
+  <script src="index.js"></script>
 </body>
 
 </html>
